--- a/flutter_tex_js/pubspec.yaml
+++ b/flutter_tex_js/pubspec.yaml
@@ -4,21 +4,21 @@ version: 1.2.17
 homepage: https://github.com/amake/flutter_tex_js
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ">=2.12.0 <3.0.0"
   flutter: ">=1.20.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_tex_js_android: ^1.0.0
-  # flutter_tex_js_android:
-  #   path: ../flutter_tex_js_android
-  flutter_tex_js_ios: ^1.0.0
-  # flutter_tex_js_ios:
-  #   path: ../flutter_tex_js_ios
-  flutter_tex_js_platform_interface: ^1.0.0
-  # flutter_tex_js_platform_interface:
-  #   path: ../flutter_tex_js_platform_interface
+  # flutter_tex_js_android: ^1.0.0
+  flutter_tex_js_android:
+    path: ../flutter_tex_js_android
+  # flutter_tex_js_ios: ^1.0.0
+  flutter_tex_js_ios:
+    path: ../flutter_tex_js_ios
+  # flutter_tex_js_platform_interface: ^1.0.0
+  flutter_tex_js_platform_interface:
+    path: ../flutter_tex_js_platform_interface
 
 dev_dependencies:
   flutter_lints: ^2.0.1
