--- a/flutter_tex_js_ios/pubspec.yaml
+++ b/flutter_tex_js_ios/pubspec.yaml
@@ -12,7 +12,9 @@ dependencies:
     sdk: flutter
 
   flutter_tex_js_platform_interface:
-    path: ../flutter_tex_js_platform_interface
+    git:
+      url: https://github.com/GoodOnuii-M/flutter_tex_js
+      path: flutter_tex_js_platform_interface
 
 dev_dependencies:
   flutter_lints: ^2.0.1
