--- a/flutter_tex_js/pubspec.yaml
+++ b/flutter_tex_js/pubspec.yaml
@@ -10,18 +10,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  # flutter_tex_js_android: ^1.0.0
   flutter_tex_js_android:
+    # path: ../flutter_tex_js_android
     git:
       url: https://github.com/GoodOnuii-M/flutter_tex_js
       path: flutter_tex_js_android
-  # flutter_tex_js_ios: ^1.0.0
   flutter_tex_js_ios:
+    # path: ../flutter_tex_js_ios
     git:
       url: https://github.com/GoodOnuii-M/flutter_tex_js
       path: flutter_tex_js_ios
-  # flutter_tex_js_platform_interface: ^1.0.0
   flutter_tex_js_platform_interface:
+    # path: ../flutter_tex_js_platform_interface
     git:
       url: https://github.com/GoodOnuii-M/flutter_tex_js
       path: flutter_tex_js_platform_interface
