--- a/flutter_tex_js_android/pubspec.yaml
+++ b/flutter_tex_js_android/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
 
   flutter_tex_js_platform_interface:
+    # path: ../flutter_tex_js_platform_interface
     git:
       url: https://github.com/GoodOnuii-M/flutter_tex_js
       path: flutter_tex_js_platform_interface
